# brave-core

./: DEPS  package-lock.json  package.json
app/: brave_generated_resources.grd  brave_main_delegate.cc
app/resources/: brave_generated_resources_ja.xtb
base/: BUILD.gn  callback_helper.h
brave/common/: pref_names.h
browser/: BUILD.gn  brave_browser_main_parts.cc  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_profile_prefs.cc
browser/brave_rewards/: rewards_service_factory.cc
browser/brave_shields/: domain_block_page_browsertest.cc
browser/extensions/: BUILD.gn
browser/extensions/api/: brave_rewards_api.cc
browser/ipfs/: ipfs_host_resolver.cc  ipfs_host_resolver.h  ipfs_host_resolver_unittest.cc  ipfs_tab_helper.cc  ipfs_tab_helper.h
browser/notifications/: BUILD.gn  brave_alert_dispatcher_mac.h  brave_alert_dispatcher_mac.mm
browser/permissions/: permission_lifetime_manager_factory.cc  permission_lifetime_manager_factory.h
browser/ui/: BUILD.gn
browser/ui/android/strings/: android_brave_strings.grd
browser/ui/tabs/test/: BUILD.gn
browser/ui/views/location_bar/: ipfs_location_view.cc
browser/ui/views/toolbar/: brave_toolbar_view.cc  brave_toolbar_view.h
browser/ui/webui/: brave_web_ui_controller_factory.cc  brave_webui_source.cc
browser/ui/webui/new_tab_page/: BUILD.gn  brave_new_tab_ui_unittest.cc  brave_new_tab_ui_utils.cc  brave_new_tab_ui_utils.h  instant_service_message_handler.cc  instant_service_message_handler.h
buildtools/win/redirect-cc/: redirect-cc.cc
chromium_src/chrome/browser/: about_flags.cc  flag_descriptions.cc  flag_descriptions.h
chromium_src/chrome/browser/net/: stub_resolver_config_reader.cc
chromium_src/chrome/common/: url_constants.cc
chromium_src/components/ntp_tiles/: constants.h
chromium_src/components/permissions/: permission_context_base.cc  permission_context_base.h  permission_request.cc  permission_request.h
chromium_src/ios/chrome/browser/: application_context_impl.mm
common/: pref_names.cc  pref_names.h  webui_url_constants.cc  webui_url_constants.h
components/brave_ads/browser/: ads_service.h  ads_service_impl.cc  ads_service_impl.h  ads_tab_helper.cc  ads_tab_helper.h
components/brave_ads/test/: BUILD.gn
components/brave_new_tab_ui/actions/: new_tab_actions.ts
components/brave_new_tab_ui/api/: topSites.ts
components/brave_new_tab_ui/components/default/: index.ts
components/brave_new_tab_ui/constants/: new_tab_types.ts
components/brave_new_tab_ui/containers/newTab/: addSiteTile.tsx  gridSites.tsx  gridTile.tsx  gridTileMenu.tsx  (+1 more)
components/brave_new_tab_ui/reducers/: new_tab_reducer.ts
components/brave_new_tab_ui/storage/: new_tab_storage.ts
components/brave_rewards/browser/: rewards_service.h  rewards_service_impl.cc  rewards_service_impl.h
components/brave_shields/browser/: domain_block_navigation_throttle.cc  domain_block_navigation_throttle.h
components/common/: locale.ts
components/cosmetic_filters/renderer/: cosmetic_filters_js_handler.cc
components/definitions/: newTab.d.ts
components/permissions/: BUILD.gn  permission_lifetime_manager.cc  permission_lifetime_manager.h
components/resources/: BUILD.gn  brave_components_resources.grd  brave_components_strings.grd
components/resources/strings/: brave_components_resources_fil.xtb  brave_components_resources_iw.xtb  brave_components_resources_ja.xtb
components/services/bat_ads/: bat_ads_impl.cc  bat_ads_impl.h
components/services/bat_ledger/: bat_ledger_impl.cc  bat_ledger_impl.h
components/sync/driver/: brave_sync_profile_sync_service_unittest.cc
components/tor/: tor_file_watcher.cc  tor_file_watcher.h  tor_launcher_factory.cc  tor_launcher_factory.h
components/unstoppable_domains/: pref_names.h
patches/: build-config-android-rules.gni.patch  chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-notifications-NotificationServiceImpl.java.patch  chrome-android-java-src-org-chromium-chrome-browser-password_manager-settings-PasswordSettings.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-chrome_content_browser_client.h.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-media-router-BUILD.gn.patch  chrome-browser-notifications-notification_platform_bridge_mac.mm.patch  chrome-browser-payments-BUILD.gn.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-ui-webui-chrome_web_ui_controller_factory.cc.patch  chrome-browser-ui-webui-settings-settings_localized_strings_provider.cc.patch  chrome-browser-ui-webui-settings-settings_secure_dns_handler.cc.patch  chrome-browser-web_applications-BUILD.gn.patch  chrome-browser-web_applications-components-BUILD.gn.patch  chrome-browser-web_applications-extensions-BUILD.gn.patch  chrome-install_static-install_util.cc.patch  chrome-test-BUILD.gn.patch  chrome-test-base-testing_profile.cc.patch  chrome-test-data-webui-BUILD.gn.patch  chrome-test-media_router-BUILD.gn.patch  components-permissions-permission_context_base.h.patch  components-permissions-permission_request.h.patch  content-browser-renderer_host-navigation_controller_impl.cc.patch  content-browser-renderer_host-navigation_request.cc.patch  content-public-browser-content_browser_client.h.patch  net-BUILD.gn.patch  third_party-blink-renderer-core-html-canvas-canvas_async_blob_creator.cc.patch  third_party-blink-renderer-core-html-canvas-html_canvas_element.cc.patch  third_party-blink-renderer-modules-canvas-canvas2d-base_rendering_context_2d.cc.patch  third_party-blink-renderer-modules-webgl-webgl_rendering_context_base.cc.patch  tools-metrics-histograms-histograms_xml-histogram_suffixes_list.xml.patch  ui-webui-resources-cr_elements-cr_toolbar-cr_toolbar_selection_overlay.html.patch
renderer/: BUILD.gn  brave_content_renderer_client.cc
test/: BUILD.gn  browser_tests_exclusions.gni  exclusions.gni  unit_tests_exclusions.gni
(+28 files in other folders)
