source_set("permissions") {
  sources = [
    "permission_lifetime_manager.cc",
    "permission_lifetime_manager.h",
    "permission_lifetime_pref_names.cc",
    "permission_lifetime_pref_names.h",
    "permission_lifetime_utils.cc",
    "permission_lifetime_utils.h",
  ]

  deps = [
    "//base",
    "//base:i18n",
    "//brave/components/resources:strings_grit",
    "//components/permissions",
    "//ui/base",
  ]
}
